# goit_python

./: .gitignore
Python_WEB/: Design Patterns.ipynb  Development_tools.ipynb  Docker.ipynb  Multithreading in Python.ipynb  Processes in Python.ipynb  SOLID.ipynb  threads.py
Python_WEB/flask-docker-app/env/: pyvenv.cfg
Python_core/: Collections_stack,deque, yield.ipynb  Files.ipynb  Functional_programming.ipynb  OOP.ipynb  Serialisation _and _copying _objects.ipynb  extended_OOP.ipynb
module_3/: module_3_task_1.py  module_3_task_2.py  module_3_task_3.py  module_3_task_4.py
module_4/phone_bot/: main.py
module_4/phone_bot/phone_bot/: __init__.py  command_handler.py  managing_system.py
module_4/phone_bot_dir/: Dockerfile  main.py  pyproject.toml
module_4/phone_bot_dir/phone_bot/: __init__.py  command_handler.py  managing_system.py
module_4/task_1/: main.py
module_4/task_1/salary/: __init__.py  salary_analysis.py
module_4/task_2/: main.py
module_4/task_2/cats/: __init__.py  cats_handler.py
module_4/task_4/: main.py
module_4/task_4/phone_bot/: __init__.py  command_handler.py
module_5/: module_5_task_1.py  module_5_task_2.py
